[package]
name = "ecs_remote"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
aws-config = { version = "1.5.16", features = ["behavior-version-latest"] }
aws-sdk-ecs = "1.66.0"
clap = { version = "4.5.29", features = ["derive"] }
dialoguer = "0.11.0"
serde = "1.0.217"
tokio = { version = "1.43.0", features = ["full"] }
